# larm-astro

./: .gitignore  README.md  tuto_move.py  tuto_scan_echo.py  tuto_sim.yaml
cam_driver/: CMakeLists.txt  package.xml  test_cam.py
cam_driver/scripts/: cam_driver
grp_astro/: CMakeLists.txt  package.xml
grp_astro/config/: auto.rviz  reel.rviz  sim.rviz
grp_astro/launch/: auto_sim_operator_launch.yaml  auto_simulation_launch.yaml  sim_operator_launch.yaml  sim_visualize_launch.yaml  simulation_launch.yaml  tbot_launch.yaml  tbot_operator_launch.yaml  tbot_visualize_launch.yaml
grp_astro/src/: auto_discovery  bottle_mapping  cam_driver  cam_driver.py  cam_vision  cam_vision.py  reactive_move  scan2point_cloud
grp_astro/src/config/: mask_tuner.py
maps/: sim_map.pgm  sim_map.yaml
misc/bag_files/scanpoints/: metadata.yaml
tuto_kickoff/: CMakeLists.txt  package.xml
tuto_kickoff/launch/: tuto_reel_global.yaml  tuto_reel_move_auto.yaml  tuto_reel_teleop.yaml  tuto_sim_global.yaml  tuto_sim_move_auto.yaml  tuto_sim_teleop.yaml
tuto_kickoff/launch/include/: tuto_reel.yaml  tuto_sim.yaml
tuto_kickoff/scripts/: myNode  reactive_move  tuto_move  tuto_scan_echo
tuto_vision/: CMakeLists.txt  mask_tuner.py  package.xml
tuto_vision/scripts/: cam_vision
tuto_vision/test/: extract_regions.py  mask_tuner.py
