<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>tuto_kickoff</name>
  <version>0.0.0</version>
  <description>Package du tuto</description>
  <maintainer email="lucas.naury@todo.todo">lucas.naury</maintainer>
  <maintainer email="ines.el/hadri@todo.todo">ines.el.hadri</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
